--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,7 @@ website:
           - research/research_covid.qmd
           - research/research_malaria.qmd
       - blog.qmd
+  page-footer: "© Tobias M. Holden 2023"
 
 format:
   html:
